--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GCP Master Architect: Scenario Drill</title>
+    <title>Google Professional Architect Certification Flashcards</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root { --g-blue: #4285F4; --g-red: #DB4437; --g-yellow: #F4B400; --g-green: #0F9D58; --bg: #f1f3f4; }
