--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
 
-<header><h1>GCP Master Architect App</h1></header>
+<header><h1>Google Professional Architect Certification Flashcards</h1></header>
 
 <div class="controls">
     <select id="catSelect" class="btn" onchange="filterCards()"><option value="all">All Scenarios</option></select>
